# app/Http/Controllers/TopicController.php
@@ -65,4 +65,41 @@ class TopicController extends Controller
         $result = TopicApi::readFromCsvFile();
         return response()->json($result, $result->responseCode);
     }
+
+    /**
+     * @OA\Get(
+     *      path="/topics/{id}/vocabularies",
+     *      summary="Get list vocabularies by id",
+     *      tags={"Topics"},
+     *      @OA\Parameter(
+     *          in="path",
+     *          name="id",
+     *          description="Id",
+     *          required=true
+     *      ),
+     *      @OA\Response(
+     *          response="200",
+     *          description="Get list vocabularies by id",
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\Schema(ref="#/components/schemas/ApiResult"),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response="404",
+     *          description="Not found any topic or vocabulary(s)",
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\Schema(ref="#/components/schemas/ApiResult"),
+     *          )
+     *      ),
+     * )
+     *
+     * @param int|string|null $id Id
+     */
+    public function getListVocabulariesById($id)
+    {
+        $result = TopicApi::getListVocabulariesById($id);
+        return response()->json($result, $result->responseCode);
+    }
 }
